tests/scripts/type_errors/types_with_the_same_name.roto
struct Foo { a: u32 }
struct Foo { b: u32 }

fn foo() {}
